--- a/ome_theme/templates/base.html
+++ b/ome_theme/templates/base.html
@@ -1,9 +1,14 @@
-<!DOCTYPE html>
-<html lang="{{ DEFAULT_LANG }}">
-<head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+
+<html xmlns="http://www.w3.org/1999/xhtml" lang="{{ DEFAULT_LANG }}">
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <link rel="stylesheet" href="/sitestyling/plonematch.css" type="text/css" />
+        <meta charset="utf-8" />
         {% block head %}
         <title>{% block title %}{{ SITENAME }}{% endblock title %}</title>
-        <meta charset="utf-8" />
         {% if FEED_ALL_ATOM %}
         <link href="{{ FEED_DOMAIN }}/{{ FEED_ALL_ATOM }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} Full Atom Feed" />
         {% endif %}
@@ -28,10 +33,34 @@
         {% if TAG_FEED_RSS and tag %}
         <link href="{{ FEED_DOMAIN }}/{{ TAG_FEED_RSS|format(tag.slug) }}" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} Tags RSS Feed" />
         {% endif %}
-        {% endblock head %}
-</head>
+    {% endblock head %}
+    </head>
+    <body id="index" class="home">
 
-<body id="index" class="home">
+		<!-- OME Banner - START -->
+		<div id="portal-top">
+			<div id="portal-header">
+				<ul id="portal-siteactions">
+					<li>
+						<br />
+					</li>
+				</ul><a id="portal-logo" accesskey="1" href="/" name="portal-logo"><img
+						src="/sitestyling/logo.jpg" alt="" title="" height="73" width="450" /></a>
+				<div id="portal-globalnav">
+					<br />
+				</div>
+			</div>
+			<div id="portal-personaltools-wrapper">
+				<ul id="portal-personaltools" class="visualInline">
+					<li>
+						<br />
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="visualClear" id="clear-space-before-wrapper-table"/>
+		<!-- OME Banner - END -->
+
         {% if DISPLAY_PAGES_ON_MENU %}
           {% for p in PAGES %}
             <li{% if p == page %} class="active"{% endif %}><a href="{{ SITEURL }}/{{ p.url }}">{{ p.title }}</a></li>
@@ -48,5 +77,20 @@
         {% endblock %}
         <footer id="contentinfo" class="body">
         </footer><!-- /#contentinfo -->
-</body>
+
+		<!-- OME Footer - Start -->
+		<div class="visualClear" id="clear-space-before-footer"><!-- --></div>
+		<div id="portal-footer">
+			<p>
+				<acronym title="Copyright">&copy;</acronym>
+				2000-2013
+				University of Dundee &amp; Open Microscopy Environment. <a href="http://www.openmicroscopy.org/site/about/licensing-attribution/licensing">Creative Commons Attribution 3.0 Unported License</a>
+			</p>
+			<p>
+				OME source code is available under the <a href="http://www.openmicroscopy.org/site/about/licensing">GNU General public license</a> or through commercial license from <a href="http://www.openmicroscopy.org/site/about/development-teams/glencoe-software">Glencoe Software</a>
+			</p>
+		</div>
+		<div class="visualClear"/>
+		<!-- OME Footer - END -->
+	</body>
 </html>
